# Computer_graphics

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  main.cpp  skeletal_mesh.h  texture_image.h
